# ElfFileParser

./: CMakeLists.txt  ElfFileParser.cpp  ElfParser.cpp  ElfParser.h  README.md
type/: elf.h
util/: Formatter.cpp  Formatter.h  Printer.cpp  Printer.h
